updated formatting for iphone 5

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
 
 <body>
     <!-- Header -->
-    <header id="top" class="header" style="padding:60px 20px 0 20px; color:#5f5757;">
+    <header id="top" class="header" style="padding:60px 0 0 0; color:#5f5757;">
         <div class="text-vertical-center" style="vertical-align:initial">
-            <h1 class="mtp titletxt"style="font-family: 'Shrikhand', cursive; letter-spacing:3px; padding: 15vh 20px 0 20px;">My Tuition Plan</h1>
+            <h1 class="mtp titletxt"style="font-family: 'Shrikhand', cursive; letter-spacing:3px; padding: 12vh 20px 0 20px;">My Tuition Plan</h1>
             <h4>Are student loans worth it?</h4>
             <br>
             <a href="#about" class="btn btn-dark btn-lg" style="color: #efecec; border-radius:5px; padding: 4px 10px 4px 12px; font-size:15px;">Learn More</a>
@@ -98,7 +98,7 @@
                                 <h4>
                                     <strong>Who Are We?</strong>
                                 </h4>
-                                <p>We are graduates, parents and programmers who understand the financial stress that comes with student loan debt and career decisions.</p>
+                                <p>We are graduates, parents and programmers who understand the stress that comes with student loan debt and career decisions.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                                 <h4>
                                     <strong>What Do We Do?</strong>
                                 </h4>
-                                <p>My Tuition Plan allows students and parents to compare the multiple paths through higher education. We'll handle the math and show you results in simple everyday terms.</p>
+                                <p>My Tuition Plan allows students and parents to compare multiple paths through higher education. We'll handle the math and show you financial in simple everyday terms.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                                 <h4>
                                     <strong>What's the Cost?</strong>
                                 </h4>
-                                <p>Our tools are free! Plain and simple.</p>
+                                <p>Our tools are free! Plain and simple. If you like what you see, help us get the word out and share with friends!</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -136,9 +136,9 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Why Does Planning Matter?</strong>
+                                    <strong>Why?</strong>
                                 </h4>
-                                <p>Student loan debt has become a problem for our generation. We believe our tools will help students make good decisions. </p>
+                                <p>Student loan debt has become a major problem for millenials. We don't pretend to know what's in your best interest, we just want to share the data! </p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
