--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,13 @@
 
 <body>
     <!-- Header -->
-    <header id="top" class="header" style="padding:60px 0 0 0; color:#5f5757;">
+    <header id="top" class="header" style="padding:60px 0 0 0; color:#3a3333;">
         <div class="text-vertical-center" style="vertical-align:initial">
-            <h1 class="mtp titletxt"style="font-family: 'Shrikhand', cursive; letter-spacing:3px; padding: 12vh 20px 0 20px;">My Tuition Plan</h1>
-            <h4>Are student loans worth it?</h4>
+            <h1 class="mtp titletxt"style="font-family: 'Shrikhand', cursive; letter-spacing:3px;">My Tuition Plan</h1>
+            <h4 style="font-family: 'Shrikhand', cursive; letter-spacing:1px;">Are student loans worth it?</h4>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg" style="color: #efecec; border-radius:5px; padding: 4px 10px 4px 12px; font-size:15px;">Learn More</a>
+            <a href="#about" class="send submitbtn hvrr" style="color: #484343;text-decoration:none; border-radius:5px; padding: 4px 10px 4px 12px; font-size:15px;">Learn More</a>
+            <!-- <a href="#about" class="btn btn-lg submitbtn hvrr" style="color: #484343; background-color:white; border-radius:5px; padding: 4px 10px 4px 12px; font-size:15px;">Learn More</a> -->
         </div>
     </header>
 
@@ -111,7 +112,7 @@
                                 <h4>
                                     <strong>What Do We Do?</strong>
                                 </h4>
-                                <p>My Tuition Plan allows students and parents to compare multiple paths through higher education. We'll handle the math and show you financial in simple everyday terms.</p>
+                                <p>My Tuition Plan allows students and parents to compare multiple paths through higher education. We'll handle the math and show you financial outcomes in simple everyday terms.</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -133,7 +134,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-question-circle fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Why?</strong>
