--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>My Tuition Plan</title>
 
+    <!-- FAVICON -->
+        <!-- for FF, Chrome, Opera -->
+        <link rel="icon" type="image/png" href="./fonts/favicon-compass.ico">
+        <!-- <link rel="icon" type="image/png" href="./fonts/favicon-compass.ico" sizes="32x32"> -->
+
+        <!-- for IE -->
+        <!-- <link rel="icon" type="image/x-icon" href="./fonts/favicon-compass.ico" > -->
+        <!-- <link rel="shortcut icon" type="image/x-icon" href="./fonts/favicon-compass.ico"/> -->
+
     <!-- Bootstrap Core CSS -->
+    <link rel="icon" href="http://example.com/favicon.png">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 
